--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
     
     <h3>3D Model of Earth</h3>
     <p class="project-title">
-      <ul><li>HTML</li><li>CSS</li></ul>
+      <ul><li>Blender</li><li>Animation</li></ul>
       <hr class="project-tile-line">
       <a
-    href="https://codepen.io/nconlisk/pen/XWKXqgb"
+    href="https://github.com/nconlisk/Blender"
     target="_blank">
       
     <span class="code">&lt;</span>
