--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="project-tile">
       <img
       class="projects-image"
-      src="https://nconlisk.github.io/portfolio/thumbnail/Earth.jpg"
+      src="https://nconlisk.github.io/portfolio/thumbnail/earth.png"
       alt="project"
     />
     
